--- a/lab3/.project
+++ b/lab3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>lab3</name>
+	<name>CS311_lab3</name>
 	<comment></comment>
 	<projects>
 	</projects>
